# RtosPico

./: CMakeLists.txt  RtosPico.c
FreeRTOS-Kernel/: CMakeLists.txt  FreeRTOSConfig.h
